--- a/Project.toml
+++ b/Project.toml
@@ -7,3 +7,8 @@ version = "1.0.0"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+
+[compat]
+HTTP = "0.8"
+JSON = "0.21"
+ProgressMeter = "1.2"
