refactor to use struct

--- a/Project.toml
+++ b/Project.toml
@@ -4,9 +4,12 @@ authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
 version = "1.0.0"
 
 [deps]
+BusinessDays = "4f18b42c-503e-5345-9536-bb0f25fc7038"
+Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
+TradingBase = "1e56c13b-5444-4379-9737-7aa7ad39eab5"
 
 [compat]
 HTTP = "0.8"
