--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -2,7 +2,7 @@ name: CompatHelper
 
 on:
   schedule:
-    - cron: '07 * * * *'
+    - cron: '09 * * * *'
 
 jobs:
   CompatHelper:
@@ -16,10 +16,4 @@ jobs:
       - name: CompatHelper.main()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: julia -e 'my_registries = [Pkg.RegistrySpec(name = "General",
-                                  uuid = "23338594-aafe-5451-b93e-139f81909106",
-                                  url = "https://github.com/JuliaRegistries/General.git"),
-                 Pkg.RegistrySpec(name = "PrivateRegistry",
-                                  uuid = "c8caab24-3583-11ea-11d4-c5acbea233a5",
-                                  url = "git@github.com:HakoSwede/PrivateRegistry.git")];
-                 using CompatHelper; CompatHelper.main(; registries = my_registries)'
+        run: julia -e 'using CompatHelper; CompatHelper.main()'
