--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -16,4 +16,20 @@ jobs:
       - name: CompatHelper.main()
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: julia -e 'using CompatHelper; CompatHelper.main()'
+        run: >-
+          julia -e '
+          using CompatHelper; 
+          registries = [
+            Pkg.RegistrySpec(
+              name = "General",
+              uuid = "23338594-aafe-5451-b93e-139f81909106",
+              url = "https://github.com/JuliaRegistries/General.git"
+            ),
+            Pkg.RegistrySpec(
+              name = "PrivateRegistry",
+              uuid = "c8caab24-3583-11ea-11d4-c5acbea233a5",
+              url = "git@github.com:HakoSwede/PrivateRegistry.git"
+            )
+          ];
+          CompatHelper.main()
+          '
