--- a/.github/workflows/CompatHelper.yml
+++ b/.github/workflows/CompatHelper.yml
@@ -11,6 +11,7 @@ jobs:
       - uses: julia-actions/setup-julia@latest
         with:
           version: 1.3
+      - uses: actions/checkout@v1.0.0
       - uses: webfactory/ssh-agent@v0.2.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
