--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Polygon"
 uuid = "6c90dff6-b80f-4bd2-aa9c-319c6ebead32"
 authors = ["Sebastian Rollen <rollenseb@gmail.com>"]
-version = "2.1.1"
+version = "1.0.0"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -14,4 +14,4 @@ TradingBase = "1e56c13b-5444-4379-9737-7aa7ad39eab5"
 HTTP = "0.8"
 JSON = "0.21"
 ProgressMeter = "1.2"
-TradingBase = "0.2, 0.3"
+TradingBase = "1.0"
